--- a/src/components/FeaturedMovie/styles.css
+++ b/src/components/FeaturedMovie/styles.css
@@ -9,7 +9,80 @@
 }
 
 .featured--horizontal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: inherit;
   height: inherit;
   background: linear-gradient(to right, #111 30%, transparent 70%);
+  padding-left: 30px;
+  padding-top: 70px;
+  padding-bottom: 150px;
+}
+
+.featured--name {
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.featured--info {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 15px;
+}
+
+.featured--points,
+.featured--year,
+.featured--seasons {
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.featured--points {
+  color: #46d369;
+}
+
+.featured--description {
+  margin-top: 15px;
+  font-size: 20px;
+  columns: #999;
+  max-width: 40%;
+}
+
+.featured--buttons {
+  margin-top: 15px;
+}
+
+.featured--watch-button,
+.featured--mylist-button {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 12px 25px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-right: 10px;
+  opacity: 1;
+  transition: all ease 0.2s;
+}
+
+.featured--watch-button:hover,
+.featured--mylist-button:hover {
+  opacity: 0.7;
+}
+
+.featured--watch-button {
+  background: #fff;
+  color: #000;
+}
+
+.featured--mylist-button {
+  background: #333;
+  color: #fff;
+}
+
+.featured--genres {
+  margin-top: 15px;
+  font-size: 18px;
+  color: #999;
 }
