feat(loadingPage/responsive): creating load page and reasponsive page)

--- a/src/components/MovieRow/styles.css
+++ b/src/components/MovieRow/styles.css
@@ -61,3 +61,10 @@
 .movieRow:hover .movieRow--right {
   opacity: 1;
 }
+
+@media(max-width: 760px) {
+  .movieRow--Left,
+  .movieRow--right {
+    opacity: 1;
+  }
+}
